[tool.poetry]
name = "black-it"
version = "0.2.1"
description = "black-it: Black-box abm calibration kit"
authors = [
    "Applied Research Team <appliedresearchteam@bancaditalia.it>",
    "Gennaro Catapano <gennaro.catapano@bancaditalia.it>",
    "Francesco De Sclavis <desclavis@bancaditalia.it>",
    "Marco Favorito <marco.favorito@bancaditalia.it>",
    "Aldo Glielmo <aldo.glielmo@bancaditalia.it>",
    "Davide Magnanimi <davide.magnanimi@bancaditalia.it>",
    "Antonio Muci <antonio.muci@bancaditalia.it>",
]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/bancaditalia/black-it"
repository = "https://github.com/bancaditalia/black-it.git"
documentation = "https://bancaditalia.github.io/black-it"
keywords = [
    "agent-based models",
    "black-box calibration",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering'
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bancaditalia/black-it/issues"
"Pull Requests" = "https://github.com/bancaditalia/black-it/pulls"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ipywidgets = ">=8.0.0,<8.0.5"
matplotlib = "^3.7.1"
numpy = ">=1.23.3,<1.24.0"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
statsmodels = "^0.13.2"
tables = "^3.8.0"
xgboost = "^1.7.2"
scipy = "^1.10.1"
joblib = "^1.2.0"
ipykernel = "^6.22.0"
gymnasium = "^0.27.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.5"
black = "^23.7.0"
codecov = "^2.1.13"
darglint = "^1.8.1"
flake8 = "^5.0.4"
flake8-bugbear = "^23.3.12"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-isort = "^6.0.0"
hypothesis = "^6.82.6"
ipython = "^8.3.0"
isort = "^5.12.0"
jupyter = "^1.0.0"
Markdown = "^3.4.4"
markdown-include = "^0.8.1"
Mesa = "^2.1.1"
mistletoe = "^1.2.0"
mkdocs = "^1.5.2"
mkdocs-autorefs = "^0.5.0"
mkdocs-material = "^9.2.3"
mkdocs-material-extensions = "^1.1.1"
mkdocstrings = "^0.22.0"
mkdocstrings-python-legacy = "^0.2.3"
mknotebooks = "^0.8.0"
mypy = "^1.5.1"
nbmake = "^1.4.3"
ndlib = "^5.1.1"
pydocstyle = "^6.3.0"
pylint = "^2.17.5"
pymdown-extensions = "^10.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.15.0"
safety = "^2.3.5"
tox = "^4.4.7"
twine = "^4.0.2"
vulture = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
exclude = ["examples/models"]
ignore_decorators = []
ignore_names = []
verbose = false
