[bdist_wheel]
universal = 1

[aliases]
test = pytest

[metadata]
license_file = LICENSE

[flake8]
ignore = W503,E203
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    tests/fixtures/plots/*,
    *.md,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    scripts/__init__.py
    scripts/whitelist.py
    scripts/whitelists/__init__.py
    examples/models
max-complexity = 10
max-line-length = 120

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
ensure_newline_before_comments=True
known_third_party=xgboost

[black]
exclude = "scripts/whitelists/"

[mypy]
python_version = 3.8
strict_optional = True
plugins = numpy.typing.mypy_plugin
exclude = examples/models.*
disallow_untyped_defs=true

[darglint]
docstring_style=google
strictness=short
ignore_regex=
ignore=DAR401

# Per-module options:
[mypy-tables]
ignore_missing_imports = True

[mypy-statsmodels.*]
ignore_missing_imports = True

[mypy-scipy.stats]
ignore_missing_imports = True

[mypy-pandas]
ignore_missing_imports = True

[mypy-sklearn.ensemble]
ignore_missing_imports = True

[mypy-GPy.*]
ignore_missing_imports = True

[mypy-scipy.special]
ignore_missing_imports = True

[mypy-scipy.spatial.distance]
ignore_missing_imports = True

[mypy-scipy.sparse]
ignore_missing_imports = True

[mypy-scipy.optimize]
ignore_missing_imports = True

[mypy-scipy]
ignore_missing_imports = True

[mypy-xgboost]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-seaborn.*]
ignore_missing_imports = True

[mypy-ipywidgets.*]
ignore_missing_imports = True

[mypy-joblib.*]
ignore_missing_imports = True

[mypy-ndlib.*]
ignore_missing_imports = True

[mypy-networkx.*]
ignore_missing_imports = True

[mypy-examples/models.*]
follow_imports = skip

# Per-module options for tests dir:

[mypy-pytest]
ignore_missing_imports = True

[mypy-mistletoe.*]
ignore_missing_imports = True

[mypy-importlib_metadata.*]
ignore_missing_imports = True

# Per-module options for examples dir:

[mypy-mesa.*]
ignore_missing_imports = True

# Per-script options
[mypy-scripts/whitelist]
ignore_errors = True
