[bdist_wheel]
universal = 1

[aliases]
test = pytest

[metadata]
license_file = LICENSE

[black]
exclude = "scripts/whitelists/"

[mypy]
python_version = 3.8
strict_optional = True
plugins = numpy.typing.mypy_plugin
exclude = examples/models.*
disallow_untyped_defs = true

[darglint]
docstring_style=google
strictness=short
ignore_regex=
ignore=DAR401

# Per-module options:

[mypy-GPy.*]
ignore_missing_imports = True

[mypy-ipywidgets.*]
ignore_missing_imports = True

[mypy-joblib.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-pandas]
ignore_missing_imports = True

[mypy-scipy]
ignore_missing_imports = True

[mypy-scipy.special]
ignore_missing_imports = True

[mypy-scipy.spatial.distance]
ignore_missing_imports = True

[mypy-scipy.sparse]
ignore_missing_imports = True

[mypy-scipy.optimize]
ignore_missing_imports = True

[mypy-scipy.stats]
ignore_missing_imports = True

[mypy-statsmodels.*]
ignore_missing_imports = True

[mypy-sklearn.ensemble]
ignore_missing_imports = True

[mypy-sklearn.gaussian_process]
ignore_missing_imports = True

[mypy-seaborn.*]
ignore_missing_imports = True

[mypy-tables]
ignore_missing_imports = True

[mypy-examples/models.*]
follow_imports = skip

# Per-module options for tests dir:

[mypy-importlib_metadata.*]
ignore_missing_imports = True

[mypy-mistletoe.*]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

# Per-module options for examples dir:

[mypy-mesa.*]
ignore_missing_imports = True

# Per-script options
[mypy-scripts/whitelist]
ignore_errors = True
