[bdist_wheel]
universal = 1

[aliases]
test = pytest

[metadata]
license_file = LICENSE

[black]
include = black_it\/.*\.pyi?$|examples\/.*\.pyi?$|scripts\/.*\.pyi?$|tests\/.*\.pyi?$
exclude = "scripts/whitelists/"

[mypy]
python_version = 3.8
strict_optional = True
plugins = numpy.typing.mypy_plugin
files = black_it, tests, scripts, examples
exclude = examples/models.*
disallow_untyped_defs = true

[darglint]
docstring_style=google
strictness=short
ignore_regex=
ignore=DAR401

# Per-module options:

[mypy-examples/models.*]
follow_imports = skip

# Per-module options for tests dir:

[mypy-importlib_metadata.*]
ignore_missing_imports = True

[mypy-mistletoe.*]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-_pytest.*]
ignore_missing_imports = True

# Per-module options for examples dir:

[mypy-mesa.*]
ignore_missing_imports = True

# Per-script options
[mypy-scripts/whitelist]
ignore_errors = True
